GH-14: fix wrapping and padding for scheduled badge on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -104,6 +104,7 @@ i.info {
 
 div .quick-actions {
     display: inline;
+    padding-left: 0.4rem;
 }
 
 .navbar .quick-action-icon {
@@ -329,6 +330,10 @@ textarea.form-control {
     margin-bottom: 0.5rem;*/
 }
 
+.box .box-row .title {
+    padding-right: 0;
+}
+
 .box .row .right {
     margin-top: 0.7rem;
     margin-bottom: 0.7rem;
@@ -354,6 +359,7 @@ textarea.form-control {
 
 .pills {
     margin-bottom: 0.1rem;
+    padding-left: 0.5rem;
 }
 
 .ellipsis {
